# tiger-mcp

./: .env.prod.template  .env.template  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  security_issue.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  security.yml
config/: README.md  claude_mcp.json  mcp_test.json
docker/dashboard-api/: .dockerignore  Dockerfile
docker/database/: .dockerignore  Dockerfile
docker/mcp-server/: .dockerignore  Dockerfile
docker/nginx/: nginx.conf
docker/postgres/: pg_hba.conf  postgresql.conf
docker/redis/: redis-prod.conf  redis.conf
docker/ssl/: README.md
docs/: API_REFERENCE.md  CLAUDE_CODE_EXAMPLES.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_QUICK_START.md  CLAUDE_CODE_SECURITY.md  CLAUDE_CODE_TROUBLESHOOTING.md  DOCKER.md  MIGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_GUIDE.md  TIGER_AUTHENTICATION_SETUP.md  TIGER_BROKER_AUTHENTICATION.md  TROUBLESHOOTING.md  tiger_api_docs.md
references/: PRD.md  tiger_dashboard
scripts/: build.sh  logs.sh  migrate_from_dashboard.py  start.sh  stop.sh
secrets/: .gitkeep  README.md
tests/: __init__.py  test_integration_scenarios.py  test_mcp_integration.py  test_performance_compatibility.py  test_tiger_auth.py
(+6 files in other folders)
